--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Tetris</title>
-  <style>
-    body {
-      background: #202028;
-      color: #fff;
-      font-family: sans-serif;
-      font-size: 2em;
-      text-align: center;
-    }
-    canvas {
-      border: solid .2em #fff;
-      height: 85vh;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
   <div id="score"></div>
   <canvas id="canvas" width="240" height="400"></canvas>
-  <script src="tetris.js"></script>
+  
+  <script src="main.js"></script>
 </body>
 </html>
